# sonic-dqn-generalization

./: .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  dockerignore  evaluate.py  pyproject.toml  train.py
configs/: dqn_sonic.yaml
src/sonic_dqn/agents/: dqn.py
src/sonic_dqn/envs/: sonic_env.py
src/sonic_dqn/evaluation/: evaluator.py
src/sonic_dqn/training/: trainer.py
src/sonic_dqn/utils/: config.py  seeding.py
